fix: button ripple overflowing

--- a/public/main.css
+++ b/public/main.css
@@ -219,10 +219,6 @@ textarea {
   line-height: inherit; }
 
 button,
-input {
-  overflow: visible; }
-
-button,
 select {
   text-transform: none; }
 
